--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,10 @@
 
         /* Header */
         .header {
-            /* background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%); */
             background: #f1f5f9;
             color: white;
             padding: 1rem 0;
-            box-shadow: 0 2px 10px rgba(37, 99, 235, 0.2);
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px !important;
         }
 
         .nav {
@@ -32,7 +31,9 @@
             align-items: center;
 
         }
-
+.nav a{
+cursor: pointer;
+}
         .logo {
             display: flex;
             align-items: center;
